source/pe/3.7/razor_using.markdown
---
layout: default
title: " PE 3.8 » Razor » "
subtitle: "Create Objects for Provisioning"
canonical: "/pe/latest/razor_using.html"

---

After you set up your Razor environment with xxx, and have installed the Razor server and client, you're ready to provision a machine. The following steps walk you through the process of creating [Razor objects](./razor_objects) and provisioning a machine with Centos. In order to perform these steps, you should

### Important Info About the Machines You provision

To successfully use a machine with Razor and install an operating system on it, the machine must:

+ Be supported by the operating system that you're installing.
+ Be able to successfully boot into the microkernel, which is based on Fedora 19.
+ Be able to successfully boot the iPXE firmware.

In addition:

+ The Razor microkernel is 64-bit only. Razor can only provision 64-bit machines.
+ Razor has a minimum RAM requirement of 512MB.




After you've [set up your environment](./razor_prereqs) and [have installed the Razor server and client](./razor_install.html), it's time to create all the objects that enable Razor to find and provision machines with the software and configurations you want.

This page describes how to create the objects you need at a high-level. More detail on each page is provided in separate pages. These are the objects you need:

+ **Repo**: The container for the objects you use Razor to install on machines, such as operating systems.
+ **Broker**: The connector between a node and a configuration management system, such as Puppet Enterprise.
+ **Tasks**: The installation and configuration instructions.
+ **Policy**: The instructions that tell Razor which repos, brokers, and tasks to use for provisioning.
+ **Hooks**: Hooks are optional. They provide a way to run arbitrary scripts when certain events occur during the operation of the Razor server.

After creating these objects, you [register a node on the Razor server](#identify-and-register-nodes).

As mentioned, to work through these steps, you must already have a Razor server up and running.


## 1. Include Repos

A repo contains all of the actual bits used when installing a node with Razor. The repo is identified by a unique name, such as 'centos-6.4'. The instructions for an installation are contained in *tasks*, which are described below.

To load a repo onto the server, you use: `razor create-repo --name=<repo name> --iso_url <URL> --task <task name>`.

For example: `razor create-repo --name=centos-6.4 --iso_url http://mirrors.usc.edu/pub/linux/distributions/centos/6.4/isos/x86_64/CentOS-6.4-x86_64-minimal.iso --task centos`.

**Note**: Creating the repo can take five or so minutes, plus however long it takes to download the ISO and unpack the contents. Currently, the best way to find out the status is to check the status of the job: `razor commands` then `razor commands <command number>` using the command number from the list. If there are errors in the job, they will be present in `razor commands <command number> errors`.


## 2. Include Brokers


Brokers are responsible for handing a node off to a config management system like Puppet Enterprise. Brokers consist of two parts: a *broker type* and information that is specific for the broker type.

The broker type is closely tied to the configuration management system that the node is being handed off to. Generally, it consists of a shell script template and a description of what additional information must be specified to create a broker from that broker type.

For the Puppet Enterprise broker type, this information consists of the node's server, and the version of PE that a node should use. The PE version defaults to "latest" unless you stipulate a different version.

You create brokers with the `create-broker` command. For example, the following sets up a simple no-op broker that does nothing:

`razor create-broker --name=noop --broker_type=noop`.

This command sets up the PE broker, which requires the server parameter.

	razor create-broker --name foo --broker_type puppet-pe --configuration '{ "server": "puppet.example.com" }'

**Stock Broker Types**

Razor ships with some stock broker types for your use:  puppet-pe, noop, and puppet.

**Note:** The puppet-pe broker type depends on the package-based simplified agent installation method. For details, see  [Installing Agents](./install_basic.html#installing-agents).


## 3. Include Tasks

Tasks describe a process or collection of actions that should be performed while provisioning machines. They can be used to designate an operating system or other software that should be installed, where to get it, and the configuration details for the installation.

Tasks are structurally simple. They consist of a YAML metadata file and any number of ERB templates. You include the tasks you want to run in your policies (policies are described in the next section).

Razor provides a handful of existing tasks, or you can create your own. To learn more about tasks, see [Writing Tasks and Templates](./razor_tasks.html).


## 4. Create Policies

Policies orchestrate repos, brokers, and tasks to tell Razor what bits to install, where to get the bits, how they should be configured, and how to communicate between a node and PE.

**Note**: Tags are named rule-sets that identify which nodes should be attached to a given policy.

Because policies contain a good deal of information, it's handy to save them in a JSON file that you run when you create the policy. Here's an example of a policy called "centos-for-small." This policy stipulates that it should be applied to the first 20 nodes that have no more than two processors that boot.

	{
		"name": "centos-for-small",
		"repo": "centos-6.4",
		"task": "centos",
		"broker": "noop",
		"enabled": true,
		"hostname": "host${id}.example.com",
		"root_password": "secret",
		"max_count": 20,
		"tags": ["small"]
	}

**Policy Tables**
You might create multiple policies, and then retrieve the policies collection. The policies are listed in order in a policy table. You can influence the order of policies as follows:

+ When you create a policy, you can include a `before` or `after` parameter in the request to indicate where the new policy should appear in the policy table.
+ Using the `move-policy` command with `before` and `after` parameters, you can put an existing policy before or after another one.

See [Razor Command Reference](./razor_reference.html) for more information.

####Create a Policy

1. Create a file called `policy.json` and copy the following template text into it:

		{
  		"name": "test_<NODE_ID>",
  		"repo": "<OS>",
  		"task": "<INSTALLER>",
  		"broker": "pe",
  		"enabled": true,
  		"hostname": "node${id}.vm",
  		"root_password": "puppet",
  		"max_count": 20,
  		"tags": ["<TAG_NAME>"]
  		}

2. Edit the options in the `policy.json` template with information specific to  your environment.
3. Apply the policy by executing:	`razor create-policy --json policy.json`.

## 5. Create Hooks (Optional)

Hooks enable you to run scripts when certain events occur during the operation of the Razor server. They allow you to both transfer information out of Razor, as well as modify the performance of an install by Razor, and therefore, hooks make it possible to customize tasks, reference outside systems, perform calculations, and more.

Razor comes with one stock hook that counts the number of times a node boots, binds to a policy, and changes its facts. This "counter" hook can be queried using `razor hooks $name`. It keeps track of the last event that a given node performed, which can be queried using `razor nodes $name log`.

There are a handful of events




## 6. Identify and Register Nodes


Next, verify that your machine can PXE boot from the Razor server and register itself as a node.

1. PXE boot a node machine in the Razor environment you have constructed for testing.
2. Find out what nodes are registered by executing `razor nodes`.

	Identify a node in the list of registered nodes. The format should look like this:

		id: "https://localhost:8151/api/collections/nodes/node1"
		name: "node1"
		spec: "/razor/v1/collections/nodes/member"

You can also inspect the registered nodes by appending the node name to the command as follows. The name of the node is generated by the server and follows the pattern `nodeNNN` where `NNN` is an integer. This command provides information such as the log path, hardware information, associated policies, and facts.

	razor nodes <NODE_NAME>


The following command opens a specific node's log: `razor nodes <node name> log`.


* * *


- [Next: Razor Command Reference](./razor_reference.html)


